fixed code copy button's color in dark mode

--- a/theming/theme-dark.scss
+++ b/theming/theme-dark.scss
@@ -123,3 +123,9 @@ p {
     color: $links-hover;
     background: $background-nav;
 }
+
+
+.tooltip {
+    --bs-tooltip-color: #000 !important;
+    --bs-tooltip-bg: #fff !important;
+}
